--- a/web_seller_phone/src/index.css
+++ b/web_seller_phone/src/index.css
@@ -32,3 +32,40 @@ a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
+
+.square-button {
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.checkout-button {
+    width: auto;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #dc3545; 
+    color: #fff;
+    cursor: pointer;
+}
+
+.rectangle-button {
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px 10px;
+}
+.square-button {
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.checkout-button {
+    background-color: #dc3545; 
+    color: #fff;
+}
