--- a/web_seller_phone/src/page/UpdatePage/Update.css
+++ b/web_seller_phone/src/page/UpdatePage/Update.css
@@ -1,12 +1,3 @@
-#product_name {
-    width: calc(50% + 330px); /* Adjust the width as needed */
-    padding: 10px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    font-family: 'Times New Roman', Times, serif;
-}
 
 #brand {
     width: 138px; /* Set width to auto to match the content */
@@ -18,6 +9,7 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+#product_name,
 #product_describe,
 #product_price,
 #image_product {
