--- a/web_seller_phone/src/Components/Button/Button.module.scss
+++ b/web_seller_phone/src/Components/Button/Button.module.scss
@@ -69,6 +69,9 @@
 }
 .disable {
     opacity: 0.5;
+    &:hover {
+        cursor: not-allowed;
+    }
 }
 .text {
     background-color: transparent;
