--- a/web_seller_phone/src/index.css
+++ b/web_seller_phone/src/index.css
@@ -27,6 +27,7 @@ button,
 input {
     border: none;
     outline: none;
+    background-color: transparent;
 }
 a[href] {
     color: var(--text-color);
@@ -46,7 +47,7 @@ a[href] {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #dc3545; 
+    background-color: #dc3545;
     color: #fff;
     cursor: pointer;
 }
@@ -66,6 +67,6 @@ a[href] {
 }
 
 .checkout-button {
-    background-color: #dc3545; 
+    background-color: #dc3545;
     color: #fff;
 }
