--- a/web_seller_phone/src/Components/Header/Header.module.scss
+++ b/web_seller_phone/src/Components/Header/Header.module.scss
@@ -11,6 +11,11 @@
     width: 100%;
     height: var(--header-height-default-layout, 60px);
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
 }
 .inner {
     height: 100%;
