--- a/web_seller_phone/src/index.css
+++ b/web_seller_phone/src/index.css
@@ -1,7 +1,7 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap');
 :root {
-    --primary-color: fe2c55;
+    --primary-color: white;
     --black: #000;
     --text-color: #333;
     --header-height-default-layout: 60px;
