call api search

--- a/web_seller_phone/src/Components/Search/Search.module.scss
+++ b/web_seller_phone/src/Components/Search/Search.module.scss
@@ -51,6 +51,7 @@
     right: calc(var(--btn-search-width) + 16px);
     top: 50%;
     transform: translateY(-50%);
+    font-size: 15px;
 }
 
 .btn-search {
